# Ramer-TS-M1N3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _build.sh  ramer.md
Source/: CMakeLists.txt  JSONAllocator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  R8BrainResampler.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h  convert_json_to_msgpack.cpp  myLookAndFeel.cpp
models/: model_ts9_48k_cond2.msgpack
modules/: CMakeLists.txt
modules/cmake/: WarningFlags.cmake
resources/: CMakeLists.txt
